--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <div class="player" id="player1">
       <div class="avatar">
         <div class="gold-counter">2</div>
-        <img src="C:/Users/hp/Downloads/detective.png" alt="Chiller Avatar" class="avatar-img">
+        <img src="detective.png" alt="Chiller Avatar" class="avatar-img">
       </div>
       <div class="stats">
         <div class="character-name">Chiller</div>
@@ -180,7 +180,7 @@
     <div class="player" id="player2">
       <div class="avatar">
         <div class="gold-counter">1</div>
-        <img src="C:/Users/hp/Downloads/ninja.png" alt="Ruto Avatar" class="avatar-img">
+        <img src="ninja.png" alt="Ruto Avatar" class="avatar-img">
       </div>
       <div class="stats">
         <div class="character-name">Ruto</div>
