--- a/index.html
+++ b/index.html
@@ -38,21 +38,17 @@
       width: 100%;
     }
     .avatar {
-  width: 120px;  /* Slightly bigger */
-  height: 120px; /* Slightly bigger */
-  position: relative;
-  animation: float 3s ease-in-out infinite;
-  transition: transform 0.2s;
-}
-
-.avatar-img {
-  width: 120px; /* Slightly bigger image */
-  height: 180px; /* Slightly bigger image */
-  border-radius: 50%;
-  object-fit: cover;
-}
-
-
+      width: 120px;
+      height: 120px;
+      position: relative;
+      animation: float 3s ease-in-out infinite;
+      transition: transform 0.2s;
+    }
+    .avatar-img {
+      width: 120px;
+      height: 180px;
+      border-radius: 50%;
+      object-fit: cover;
     }
     .avatar:hover {
       transform: scale(1.1);
@@ -130,6 +126,7 @@
       transition: width 0.3s;
       background: linear-gradient(to right, #00b4d8, #0077b6);
       box-shadow: 0 0 12px #00b4d8, inset 0 0 6px #0077b6;
+      width: 0%;
     }
     @keyframes pulseBar {
       0%, 100% { box-shadow: 0 0 10px #00b4d8, inset 0 0 5px #0077b6; }
@@ -164,15 +161,15 @@
       </div>
       <div class="stats">
         <div class="character-name">Chiller</div>
-        <div class="level-name">Level 50 Blue Dragon <span class="level-icon">🐉</span></div>
+        <div class="level-name">Level 0 Blue Dragon <span class="level-icon">🐉</span></div>
         <div class="level-xp">
-          <div class="level">Lv 1</div>
+          <div class="level">Lv 0</div>
           <div class="xp-text">XP: 0</div>
         </div>
-        <div class="bar"><div class="xp-bar-fill" style="width: 20%"></div></div>
+        <div class="bar"><div class="xp-bar-fill" style="width: 0%"></div></div>
         <div class="streak-bar">
-          <div class="streak-dot active"></div>
-          <div class="streak-dot active"></div>
+          <div class="streak-dot"></div>
+          <div class="streak-dot"></div>
           <div class="streak-dot"></div>
         </div>
       </div>
@@ -184,14 +181,14 @@
       </div>
       <div class="stats">
         <div class="character-name">Ruto</div>
-        <div class="level-name">Level 30 Red Fox <span class="level-icon">🦊</span></div>
+        <div class="level-name">Level 0 Red Fox <span class="level-icon">🦊</span></div>
         <div class="level-xp">
-          <div class="level">Lv 1</div>
+          <div class="level">Lv 0</div>
           <div class="xp-text">XP: 0</div>
         </div>
-        <div class="bar"><div class="xp-bar-fill" style="width: 80%"></div></div>
+        <div class="bar"><div class="xp-bar-fill" style="width: 0%"></div></div>
         <div class="streak-bar">
-          <div class="streak-dot active"></div>
+          <div class="streak-dot"></div>
           <div class="streak-dot"></div>
           <div class="streak-dot"></div>
         </div>
@@ -200,3 +197,4 @@
   </div>
 </body>
 </html>
+
