--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
     }
     .xp-bar-fill {
       height: 100%;
-      transition: width 0.3s;
+      width: 0%;
       background: linear-gradient(to right, #00b4d8, #0077b6);
       box-shadow: 0 0 12px #00b4d8, inset 0 0 6px #0077b6;
-      width: 0%;
+      transition: width 0.3s;
     }
     @keyframes pulseBar {
       0%, 100% { box-shadow: 0 0 10px #00b4d8, inset 0 0 5px #0077b6; }
@@ -161,9 +161,9 @@
       </div>
       <div class="stats">
         <div class="character-name">Chiller</div>
-        <div class="level-name">Level 0 Blue Dragon <span class="level-icon">🐉</span></div>
+        <div class="level-name">Level 1 Waking Apprentice <span class="level-icon">🌱</span></div>
         <div class="level-xp">
-          <div class="level">Lv 0</div>
+          <div class="level">Lv 1</div>
           <div class="xp-text">XP: 0</div>
         </div>
         <div class="bar"><div class="xp-bar-fill" style="width: 0%"></div></div>
@@ -181,9 +181,9 @@
       </div>
       <div class="stats">
         <div class="character-name">Ruto</div>
-        <div class="level-name">Level 0 Red Fox <span class="level-icon">🦊</span></div>
+        <div class="level-name">Level 1 Waking Apprentice <span class="level-icon">🌱</span></div>
         <div class="level-xp">
-          <div class="level">Lv 0</div>
+          <div class="level">Lv 1</div>
           <div class="xp-text">XP: 0</div>
         </div>
         <div class="bar"><div class="xp-bar-fill" style="width: 0%"></div></div>
@@ -197,4 +197,3 @@
   </div>
 </body>
 </html>
-
