--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
         <div class="level-name">Level 1 Waking Apprentice <span class="level-icon">🌱</span></div>
         <div class="level-xp">
           <div class="level">Lv 1</div>
-          <div class="xp-text">XP: 0</div>
+          <div class="xp-text">XP: 15</div>
         </div>
-        <div class="bar"><div class="xp-bar-fill" style="width: 0%"></div></div>
+        <div class="bar"><div class="xp-bar-fill" style="width: 60%"></div></div>
         <div class="streak-bar">
-          <div class="streak-dot"></div>
+          <div class="streak-dot active"></div>
           <div class="streak-dot"></div>
           <div class="streak-dot"></div>
         </div>
@@ -181,14 +181,14 @@
       </div>
       <div class="stats">
         <div class="character-name">Ruto</div>
-        <div class="level-name">Level 1 Waking Apprentice <span class="level-icon">🌱</span></div>
+        <div class="level-name">Level 1 Blooming Initiate <span class="level-icon">🌼</span></div>
         <div class="level-xp">
-          <div class="level">Lv 1</div>
+          <div class="level">Lv 2</div>
           <div class="xp-text">XP: 0</div>
         </div>
         <div class="bar"><div class="xp-bar-fill" style="width: 0%"></div></div>
         <div class="streak-bar">
-          <div class="streak-dot"></div>
+          <div class="streak-dot active"></div>
           <div class="streak-dot"></div>
           <div class="streak-dot"></div>
         </div>
