--- a/index.html
+++ b/index.html
@@ -161,15 +161,15 @@
       </div>
       <div class="stats">
         <div class="character-name">Chiller</div>
-        <div class="level-name">Level 1 Waking Apprentice <span class="level-icon">🌱</span></div>
+        <div class="level-name">Level 3	Crawling Ant <span class="level-icon">🐜</span></div>
         <div class="level-xp">
-          <div class="level">Lv 1</div>
-          <div class="xp-text">XP: 15</div>
+          <div class="level">Lv 3</div>
+          <div class="xp-text">XP: 5</div>
         </div>
-        <div class="bar"><div class="xp-bar-fill" style="width: 60%"></div></div>
+        <div class="bar"><div class="xp-bar-fill" style="width: 6.66%"></div></div>
         <div class="streak-bar">
           <div class="streak-dot active"></div>
-          <div class="streak-dot"></div>
+          <div class="streak-dot active"></div>
           <div class="streak-dot"></div>
         </div>
       </div>
@@ -181,15 +181,15 @@
       </div>
       <div class="stats">
         <div class="character-name">Ruto</div>
-        <div class="level-name">Level 2 Blooming Initiate <span class="level-icon">🌼</span></div>
+        <div class="level-name">Level 3	Crawling Ant <span class="level-icon">🐜</span></div>
         <div class="level-xp">
-          <div class="level">Lv 2</div>
-          <div class="xp-text">XP: 0</div>
+          <div class="level">Lv 3</div>
+          <div class="xp-text">XP: 60</div>
         </div>
-        <div class="bar"><div class="xp-bar-fill" style="width: 0%"></div></div>
+        <div class="bar"><div class="xp-bar-fill" style="width: 80%"></div></div>
         <div class="streak-bar">
           <div class="streak-dot active"></div>
-          <div class="streak-dot"></div>
+          <div class="streak-dot active"></div>
           <div class="streak-dot"></div>
         </div>
       </div>
