--- a/index.html
+++ b/index.html
@@ -156,40 +156,40 @@
   <div class="players">
     <div class="player" id="player1">
       <div class="avatar">
-        <div class="gold-counter">0</div>
+        <div class="gold-counter">1</div>
         <img src="detective.png" alt="Chiller Avatar" class="avatar-img">
       </div>
       <div class="stats">
         <div class="character-name">Chiller</div>
-        <div class="level-name">Level 3	Crawling Ant <span class="level-icon">🐜</span></div>
+        <div class="level-name">Level 4	Patient Tortoise <span class="level-icon">🐢</span></div>
         <div class="level-xp">
-          <div class="level">Lv 3</div>
-          <div class="xp-text">XP: 5</div>
+          <div class="level">Lv 4</div>
+          <div class="xp-text">XP: 25</div>
         </div>
-        <div class="bar"><div class="xp-bar-fill" style="width: 6.66%"></div></div>
+        <div class="bar"><div class="xp-bar-fill" style="width: 25%"></div></div>
         <div class="streak-bar">
           <div class="streak-dot active"></div>
-          <div class="streak-dot active"></div>
+          <div class="streak-dot"></div>
           <div class="streak-dot"></div>
         </div>
       </div>
     </div>
     <div class="player" id="player2">
       <div class="avatar">
-        <div class="gold-counter">0</div>
+        <div class="gold-counter">1</div>
         <img src="ninja.png" alt="Ruto Avatar" class="avatar-img">
       </div>
       <div class="stats">
         <div class="character-name">Ruto</div>
-        <div class="level-name">Level 3	Crawling Ant <span class="level-icon">🐜</span></div>
+        <div class="level-name">Level 4	Patient Tortoise <span class="level-icon"></span></div>
         <div class="level-xp">
-          <div class="level">Lv 3</div>
-          <div class="xp-text">XP: 60</div>
+          4<div class="level">Lv 3</div>
+          <div class="xp-text">XP: 55</div>
         </div>
-        <div class="bar"><div class="xp-bar-fill" style="width: 80%"></div></div>
+        <div class="bar"><div class="xp-bar-fill" style="width: 55%"></div></div>
         <div class="streak-bar">
           <div class="streak-dot active"></div>
-          <div class="streak-dot active"></div>
+          <div class="streak-dot"></div>
           <div class="streak-dot"></div>
         </div>
       </div>
