--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </div>
       <div class="stats">
         <div class="character-name">Ruto</div>
-        <div class="level-name">Level 4	Patient Tortoise <span class="level-icon"></span></div>
+        <div class="level-name">Level 4	Patient Tortoise <span class="level-icon">🐢</span></div>
         <div class="level-xp">
           4<div class="level">Lv 4</div>
           <div class="xp-text">XP: 55</div>
