--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
       </div>
       <div class="stats">
         <div class="character-name">Chiller</div>
-        <div class="level-name">Level 4	Patient Tortoise <span class="level-icon">🐢</span></div>
+        <div class="level-name">Level 5	Watchful Rabbit <span class="level-icon">🐇</span></div>
         <div class="level-xp">
-          <div class="level">Lv 4</div>
-          <div class="xp-text">XP: 25</div>
+          <div class="level">Lv 5</div>
+          <div class="xp-text">XP: 5</div>
         </div>
-        <div class="bar"><div class="xp-bar-fill" style="width: 25%"></div></div>
+        <div class="bar"><div class="xp-bar-fill" style="width: 4%"></div></div>
         <div class="streak-bar">
           <div class="streak-dot active"></div>
           <div class="streak-dot"></div>
@@ -181,12 +181,12 @@
       </div>
       <div class="stats">
         <div class="character-name">Ruto</div>
-        <div class="level-name">Level 4	Patient Tortoise <span class="level-icon">🐢</span></div>
+        <div class="level-name">Level 5	Watchful Rabbit <span class="level-icon">🐇</span></div>
         <div class="level-xp">
-          4<div class="level">Lv 4</div>
-          <div class="xp-text">XP: 55</div>
+          4<div class="level">Lv 5</div>
+          <div class="xp-text">XP: 5</div>
         </div>
-        <div class="bar"><div class="xp-bar-fill" style="width: 55%"></div></div>
+        <div class="bar"><div class="xp-bar-fill" style="width: 4%"></div></div>
         <div class="streak-bar">
           <div class="streak-dot active"></div>
           <div class="streak-dot"></div>
