--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div class="character-name">Ruto</div>
         <div class="level-name">Level 5	Watchful Rabbit <span class="level-icon">🐇</span></div>
         <div class="level-xp">
-          4<div class="level">Lv 5</div>
+          <div class="level">Lv 5</div>
           <div class="xp-text">XP: 5</div>
         </div>
         <div class="bar"><div class="xp-bar-fill" style="width: 4%"></div></div>
